package com.tp.domain.donante.persona;

public enum TipoNotificador {
    EMAIL,
    SMS,
    WHATSAPP
}