package com.tp.donatrack.notificaciones.domain.notificadores.email.providers;


import com.tp.donatrack.notificaciones.domain.notificadores.email.iEmailProvider;

public class Resend implements iEmailProvider {
    //TODO: falta implementar las credenciales y todo eso

    @Override
    public void enviarEmail(String destinatario, String mensaje, String asunto) {

    }
}
