@startuml notificaciones
!include ../_style.puml

title Módulo servicio-notificaciones\n(capas controllers / services / repositories / domain, según el código)

skinparam componentStyle uml2

component "servicio-notificaciones" as Modulo {

    package "controllers" {
        class NotificacionController <<Controller>> {
            +notificar(body: NotificacionRequestDTO)
            +listarTodas()
            +listarPorPersona(idPersona: Long)
        }
    }

    package "services" {
        class NotificacionService <<Service>> {
            +notificar(body: NotificacionRequestDTO)
            +buscar(idPersona: Long): List<Notificacion>
            +buscarTodas(): List<Notificacion>
            -seleccionarNotificador(medio): Optional<iNotificador>
        }
    }

    package "repositories" {
        class NotificacionRepository <<Repository>> {
            +save(n: Notificacion): Notificacion
            +findByIdPersona(id: Long): List<Notificacion>
            +findAll(): List<Notificacion>
        }
    }

    package "domain.entities" {
        class Notificacion {
            -id: Long
            -id_persona: Long
            -asunto: String
            -mensaje: String
            -destinatario: String
            -fecha: LocalDateTime
        }

        interface iNotificador {
            +enviarNotificacion(destinatario, mensaje, asunto)
            +getMedio(): TipoNotificador
        }
    }

    package "domain.notificadores.email" {
        interface iEmailProvider {
            +enviarEmail(destinatario, mensaje, asunto)
        }
        class NotificadorEmail {
            +getMedio(): TipoNotificador
        }
        class EmailProvider
        package "providers" {
            class Resend
        }
    }

    package "domain.notificadores.sms" {
        interface iSMSProvider {
            +enviarSMS(numero, mensaje)
        }
        class NotificadorSMS {
            +getMedio(): TipoNotificador
        }
        class SMSProvider
    }

    package "domain.notificadores.whatsapp" {
        interface iWhatsAppProvider {
            +enviarWhatsApp(numero, mensaje)
        }
        class NotificadorWhatsApp {
            +getMedio(): TipoNotificador
        }
        class WhatsAppProvider
    }
}

package "commons (módulo compartido)" #F7F7F7 {
    enum TipoNotificador {
        EMAIL
        SMS
        WHATSAPP
    }
    class NotificacionRequestDTO <<DTO>>
}

' ===================== Cableado entre capas =====================
NotificacionController ..> NotificacionService : usa >
NotificacionService ..> NotificacionRepository : persiste >
NotificacionService ..> iNotificador : selecciona por medio >
NotificacionController ..> NotificacionRequestDTO
NotificacionService ..> Notificacion : crea >

' ===================== Realizaciones de dominio (Strategy) =====================
iNotificador <|.. NotificadorEmail
iNotificador <|.. NotificadorSMS
iNotificador <|.. NotificadorWhatsApp
iEmailProvider <|.. EmailProvider
iEmailProvider <|.. Resend
iSMSProvider <|.. SMSProvider
iWhatsAppProvider <|.. WhatsAppProvider
NotificadorEmail "1" o-- "1" iEmailProvider : emailProvider
NotificadorSMS "1" o-- "1" iSMSProvider : smsProvider
NotificadorWhatsApp "1" o-- "1" iWhatsAppProvider : whatsappProvider
iNotificador ..> TipoNotificador

note as N1
    **Strategy de dos niveles**: NotificacionService selecciona el
    iNotificador cuyo getMedio() coincide con el TipoNotificador pedido
    (nivel 1); cada Notificador* delega el envío en un proveedor concreto
    inyectado por composición (nivel 2). Los 3 proveedores activos son
    simulaciones; Resend es una impl. alternativa no wireada (sin @Component).
end note

legend right
    |= Color / estereotipo |= Significado |
    | <back:#EFF6FF>     </back> | Clase de dominio |
    | <<Controller>> | Capa de exposición REST |
    | <<Service>> | Capa de aplicación / negocio |
    | <<Repository>> | Persistencia en memoria |
    | <back:#FFF3E0>     </back> | Interfaz (Strategy) |
    | <back:#F1F4E8>     </back> | Enum de dominio |
    | <back:#F7F7F7>     </back> | Módulo `commons` |
endlegend

@enduml
